--- a/sparepart_tahun_2020.Rmd
+++ b/sparepart_tahun_2020.Rmd
@@ -36,7 +36,9 @@ total_ajuan_03
 ```{r, layout="l-body-outset"}
 kable(total_ajuan_03, digits = 3, format.args = list(big.mark = ",", 
   scientific = FALSE)) %>%
-  kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+   kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = F, position = "left", font_size = 10, fixed_thead = T) %>% 
+  column_spec(2, bold = T, width = "8em", background = "#e8f0fe") %>%
+  row_spec(0, background = "#617aa6", color = "white")
 
 
 
