tambah tabel realisasi

--- a/sparepart_tahun_2020.Rmd
+++ b/sparepart_tahun_2020.Rmd
@@ -25,6 +25,7 @@ library(tidyverse)
 ajuan_03 <- read.csv("https://docs.google.com/spreadsheets/d/e/2PACX-1vQyzWENYo8j5mtMAgH04yoJ3ams0FdmeRrk5FikO93jq6g3__7iCm-c5nX9dP2WScA_h2Q_lOEFGOZU/pub?gid=0&single=true&output=csv")
 realisasi_03 <- read.csv("https://docs.google.com/spreadsheets/d/e/2PACX-1vRmL2ZS3_Ai5yg9v55ZPIorZxTtZSuYApa4Ti2ut0i3FfBGb9Hr624WJidDWQalyWPWdGRzXiJtosLj/pub?gid=0&single=true&output=csv")
 
+str(realisasi_03)
 total_ajuan_03 <- ajuan_03 %>% 
                       group_by(NAMA.SEKSI.PLANNER) %>%
                       summarize(jumlah = sum(total, na.rm=TRUE))
@@ -33,7 +34,7 @@ format(total_ajuan_03$jumlah, big.mark=",",scientific=FALSE)
 total_ajuan_03
                     
 ```
-```{r, layout="l-body-outset"}
+```{r, echo=FALSE, layout="l-body-outset"}
 kable(total_ajuan_03, digits = 3, format.args = list(big.mark = ",", 
   scientific = FALSE)) %>%
    kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = F, position = "left", font_size = 10, fixed_thead = T) %>% 
@@ -41,6 +42,27 @@ kable(total_ajuan_03, digits = 3, format.args = list(big.mark = ",",
   row_spec(0, background = "#617aa6", color = "white")
 
 
+
+```
+  
+### Daftar Jumlah Realisasi sparepart per unit kerja  
+```{r include=FALSE}
+realisasi_03$Amount.in.LC <- as.numeric(as.character(realisasi_03$Amount.in.LC))
+total_realisasi_03 <- realisasi_03 %>% 
+                      filter(NAMA.SEKSI.PG != "#N/A") %>%
+                      group_by(NAMA.SEKSI.PG) %>%
+                      summarize(jumlah = sum(Amount.in.LC, na.rm=TRUE))
+format(total_realisasi_03$jumlah, big.mark=",",scientific=FALSE)                      
+                                            
+total_realisasi_03
+```
+------------------------------------------
+```{r, echo=FALSE, layout="l-body-outset"}
+kable(total_realisasi_03, digits = 3, format.args = list(big.mark = ",", 
+  scientific = FALSE)) %>%
+   kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = F, position = "left", font_size = 10, fixed_thead = T) %>% 
+  column_spec(2, bold = T, width = "8em", background = "#e8f0fe") %>%
+  row_spec(0, background = "grey", color = "white")
 
 ```
 
