--- a/sparepart_tahun_2020.Rmd
+++ b/sparepart_tahun_2020.Rmd
@@ -11,11 +11,10 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-```
+```  
 ## Report Maret 2020  
-Halaman ini berisi laporan ajuan dan realisasi sparepart periode maret 2020  
--------------------------------  
-##   
+_Halaman ini berisi laporan ajuan dan realisasi sparepart periode maret 2020_  
+
 ### Tabel Ajuan dari User  
 
 
@@ -23,6 +22,8 @@ Halaman ini berisi laporan ajuan dan realisasi sparepart periode maret 2020
 library(kableExtra)
 library(knitr)
 library(tidyverse)
+
+library(DT)
 ajuan_03 <- read.csv("https://docs.google.com/spreadsheets/d/e/2PACX-1vQyzWENYo8j5mtMAgH04yoJ3ams0FdmeRrk5FikO93jq6g3__7iCm-c5nX9dP2WScA_h2Q_lOEFGOZU/pub?gid=0&single=true&output=csv")
 realisasi_03 <- read.csv("https://docs.google.com/spreadsheets/d/e/2PACX-1vRmL2ZS3_Ai5yg9v55ZPIorZxTtZSuYApa4Ti2ut0i3FfBGb9Hr624WJidDWQalyWPWdGRzXiJtosLj/pub?gid=0&single=true&output=csv")
 
@@ -47,9 +48,10 @@ kable(total_ajuan_03, digits = 3, format.args = list(big.mark = ",",
 ```
 ---------------------------------------------   
      
-##   
+
 
 ### Daftar Jumlah Realisasi sparepart per unit kerja  
+
 ```{r include=FALSE}
 realisasi_03$Amount.in.LC <- as.numeric(as.character(realisasi_03$Amount.in.LC))
 total_realisasi_03 <- realisasi_03 %>% 
@@ -85,10 +87,16 @@ by_kategori_03 <- realisasi_03 %>%
 #format(by_kategori_03$jumlah, big.mark=",",scientific=FALSE)                      
                                             
 g <- ggplot(by_kategori_03, aes(x = reorder(KATEGORI1, -jumlah), y = jumlah)) +
-                  geom_bar(stat = "identity", fill="steelblue") +
+                  geom_bar(stat = "identity", fill="#c87c2ae6") +
                   
                   labs(y= "Jumlah dalam Milyar", x = "Kategori Aktivitas") +
                   coord_flip()
 g
+```
+
+### DAFTAR AJUAN MARET 2020 (versi2)  
+
+```{r}
+datatable(total_ajuan_03)
 ```
 
